# smalldemo

./: CMakeLists.txt  build.sh
src/: glut.c  glx.c  glx.cpp  nurbs.c  sfml.cpp  xcb-only.c  xcb-smaller.c  xcb.c
